fix: scrollbar

--- a/packages/core/src/styles/full-editor.css
+++ b/packages/core/src/styles/full-editor.css
@@ -14,6 +14,16 @@
         width: 100%;
         height: 100%;
 
+        .no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+
+        /* Hide scrollbar for IE, Edge and Firefox */
+        .no-scrollbar {
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
+        }
+
         * {
             box-sizing: border-box;
         }
